syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

message Hash
{
    bytes Value = 1;
    HashType HashType = 2;
}

enum HashType
{
    AccountAddress = 0;
    General = 1;
    ResourcePath = 2;
    ResourcePointer = 3;
    StateHash = 4;
    
}